--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -448,10 +448,7 @@
                 <goal>features-generate-descriptor</goal>
               </goals>
               <configuration>
-                <!--
-                Standard template for nexus plugin feature (relative path from plugin projects)
-                -->
-                <inputFile>${project.basedir}/../../feature.xml</inputFile>
+                <includeProjectArtifact>true</includeProjectArtifact>
               </configuration>
             </execution>
           </executions>
