Disable Karaf shutdown port

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/custom.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/custom.properties
@@ -10,6 +10,7 @@ karaf.systemBundlesStartLevel=50
 #
 
 karaf.lock.class=org.sonatype.nexus.karaf.NexusFileLock
+karaf.shutdown.port=-1
 
 nexus-base=${karaf.base}
 nexus-args=${karaf.base}/etc/jetty.xml,${karaf.base}/etc/jetty-requestlog.xml
