Minor tweaks to ensure mvn: protocol is active as soon as possible

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/custom.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/custom.properties
@@ -9,6 +9,9 @@ karaf.systemBundlesStartLevel=50
 # You can place any customized configuration here.
 #
 
+# early load of mvn: protocol config
+${includes}=org.ops4j.pax.url.mvn.cfg
+
 karaf.lock.class=org.sonatype.nexus.karaf.NexusFileLock
 karaf.shutdown.port=-1
 
