--- a/assemblies/nexus-base-template/pom.xml
+++ b/assemblies/nexus-base-template/pom.xml
@@ -357,10 +357,14 @@
                 <replace file="${project.build.directory}/assembly/bin/status" token='name $0' value='name "$0"'/>
                 <replace file="${project.build.directory}/assembly/bin/stop" token='name $0' value='name "$0"'/>
 
-                <!-- include a few additional extra packages required by our environment -->
-                <replace file="${project.build.directory}/assembly/etc/config.properties"
-                  token="packages.extra="
-                  value="packages.extra= \${line.separator} sun.misc, \${line.separator} sun.security.ssl, \${line.separator} com.sun.net.httpserver, \${line.separator} javax.annotation;version=1.2, \${line.separator} javax.annotation.security;version=1.2, \${line.separator} org.xerial.snappy,"/>
+                <replace file="${project.build.directory}/assembly/etc/config.properties">
+                  <!-- include a few additional extra packages required by our environment -->
+                  <replacefilter token="packages.extra="
+                                 value="packages.extra= \${line.separator} sun.misc, \${line.separator} sun.security.ssl, \${line.separator} com.sun.net.httpserver, \${line.separator} javax.annotation;version=1.2, \${line.separator} javax.annotation.security;version=1.2, \${line.separator} org.xerial.snappy,"/>
+                  <!-- comment this so mvn: protocol is active as soon as possible -->
+                  <replacefilter token="org.ops4j.pax.url.mvn.requireConfigAdminConfig"
+                                 value="#org.ops4j.pax.url.mvn.requireConfigAdminConfig"/>
+                </replace>
 
                 <!-- trim out various enterprise/deployment features we don't need at the moment -->
                 <replace file="${project.build.directory}/assembly/etc/org.apache.karaf.features.cfg">
