[NEXUS-6881] Escape values in LDAP filter
commit 67077ca4a6ef117fe1879e8ee05b358fad271006
Merge: 27510be 2c6c2bb
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Tue Oct 14 14:49:51 2014 +0300

    Merge remote-tracking branch 'origin/nexus-2.11.x' into nexus-2.11.x-NEXUS-6881-ldap-comma

    Conflicts:
    	pom.xml

commit 27510beeec123be702b7fb98d025b01241d71400
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Mon Oct 13 21:59:04 2014 +0300

    Use Spring LdapEncoder to escape ldap filter

commit 21eff68262b5fb7fa1f3143dd18520d59a948bca
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Fri Oct 10 12:42:03 2014 +0300

    [NEXUS-6881] Change UTs to use a use with comma (,) in name

commit 480d7be4dcb89df242095381aef62140179e0c1b
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Fri Oct 10 12:30:53 2014 +0300

    [NEXUS-6881] Escape comma (,) using \

commit 3b425d441d50ed479afa02cb6fe8b67c2dffb211
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Fri Oct 10 12:29:33 2014 +0300

    Use plexus-ldap-testsuite 1.5.1-SNAPSHOT

commit 922463af8b932c6e3223409b8dedfb65470ced92
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Thu Oct 9 12:49:23 2014 +0300

    [NEXUS-6881] Escape values in LDAP filter

--- a/pom.xml
+++ b/pom.xml
@@ -561,6 +561,7 @@
               <exclude>**/nexus-ldap-common/**/org/sonatype/security/ldap/dao/password/hash/MD5Crypt.java</exclude>
               <exclude>**/nexus-csrfguard/**/org/sonatype/nexus/csrfguard/CsrfGuardFilter.java</exclude>
               <exclude>**/nexus-csrfguard/**/org/sonatype/nexus/csrfguard/CsrfGuardServlet.java</exclude>
+              <exclude>**/nexus-ldap-common/**/org/sonatype/security/ldap/LdapEncoder.java</exclude>
 
               <!--
               HACK: Excludes for temporary import bits
