[NEXUS-6881] Exclude bouncycastle:bcprov-jdk15 brought in by apacheds 1.5.5 via plexus-ldap-testsuite 1.5.1-SNAPSHOT

--- a/buildsupport/plexus/pom.xml
+++ b/buildsupport/plexus/pom.xml
@@ -118,6 +118,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>bouncycastle</groupId>
+            <artifactId>bcprov-jdk15</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
     </dependencies>
