[NEXUS-6881] Escape values in LDAP filter
Cherry picked from 2.11 1580655598c0cf05b16d9be338c9d7f12859016a

--- a/pom.xml
+++ b/pom.xml
@@ -714,6 +714,7 @@
               Excludes for specific classes which have compatible, yet different licences.
               -->
               <exclude>**/nexus-extdirect-plugin/**/com/softwarementors/**</exclude>
+              <exclude>**/nexus-ldap-plugin/**/org/sonatype/security/ldap/LdapEncoder.java</exclude>
             </excludes>
           </configuration>
         </plugin>
