--- a/buildsupport/plexus/pom.xml
+++ b/buildsupport/plexus/pom.xml
@@ -94,7 +94,7 @@
       <dependency>
         <groupId>org.sonatype.plexus</groupId>
         <artifactId>plexus-ldap-testsuite</artifactId>
-        <version>1.5</version>
+        <version>1.5.1-SNAPSHOT</version>
         <exclusions>
           <exclusion>
             <groupId>org.codehaus.plexus</groupId>
@@ -111,6 +111,10 @@
           <exclusion>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>bouncycastle</groupId>
+            <artifactId>bcprov-jdk15</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
