instead of having the bundler gem inside the it-resources take it from the maven repo

--- a/testsuite/modern-testsuite/pom.xml
+++ b/testsuite/modern-testsuite/pom.xml
@@ -46,6 +46,12 @@
         <version>1.2.1</version>
         <type>gem</type>
       </dependency>
+      <dependency>
+        <groupId>rubygems</groupId>
+        <artifactId>bundler</artifactId>
+        <version>1.7.3</version>
+        <type>gem</type>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
