Manual merge of NX-450-component-source-api

--- a/components/nexus-plugin-api/pom.xml
+++ b/components/nexus-plugin-api/pom.xml
@@ -116,6 +116,17 @@
       <artifactId>commons-fileupload</artifactId>
     </dependency>
 
+    <!-- Component Services -->
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-component-model</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-component-source-api</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-test-common</artifactId>
