--- a/plugins/basic/nexus-componentviews-plugin/pom.xml
+++ b/plugins/basic/nexus-componentviews-plugin/pom.xml
@@ -40,6 +40,11 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-component-source-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-plugin-testsupport</artifactId>
       <scope>test</scope>
     </dependency>
