Parallel creation of nexus-component-services.

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -37,6 +37,7 @@
     <module>nexus-component-assetstore</module>
     <module>nexus-component-model</module>
     <module>nexus-component-recordstore</module>
+    <module>nexus-component-services</module>
     <module>nexus-component-source-api</module>
     <module>nexus-configuration-model</module>
     <module>nexus-core</module>
