--- a/components/nexus-mime/src/main/resources/builtin-mimetypes.properties
+++ b/components/nexus-mime/src/main/resources/builtin-mimetypes.properties
@@ -25,8 +25,8 @@ swf = application/x-shockwave-flash
 aar = application/zip
 apklib = application/zip
 apk = application/vnd.android.package-archive
-gz = application/x-gzip,application/x-tgz
-tgz = application/x-tgz,application/x-gzip
+gz = application/x-gzip,application/gzip,application/x-tgz
+tgz = application/x-tgz,application/x-gzip,application/gzip
 bz2 = application/x-bzip2
-tbz = application/x-bzip2
+tbz = application/x-bzip2,application/x-bzip
 nupkg = application/zip
