NEXUS-7345: add nexus-commands bundle+feature and register OrientDB commands with Karaf's shell

--- a/buildsupport/db/pom.xml
+++ b/buildsupport/db/pom.xml
@@ -87,6 +87,20 @@
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-tools</artifactId>
         <version>${orientdb.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-client</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-object</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
