--- a/buildsupport/osgi/pom.xml
+++ b/buildsupport/osgi/pom.xml
@@ -94,6 +94,12 @@
         <version>${karaf.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.karaf.shell</groupId>
+        <artifactId>org.apache.karaf.shell.console</artifactId>
+        <version>${karaf.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
