--- a/components/pom.xml
+++ b/components/pom.xml
@@ -34,6 +34,7 @@
     <module>nexus-blobstore-file</module>
     <module>nexus-bootstrap</module>
     <module>nexus-client-core</module>
+    <module>nexus-commands</module>
     <module>nexus-component-model</module>
     <module>nexus-component-services</module>
     <module>nexus-component-source-api</module>
