[NEXUS-7336] Replace status security xls with groovy

--- a/components/nexus-core/pom.xml
+++ b/components/nexus-core/pom.xml
@@ -402,6 +402,11 @@
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
@@ -424,6 +429,13 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerId>groovy-eclipse-compiler</compilerId>
+        </configuration>
+      </plugin>
       <!--
       FIXME: Get rid of test-jar, these artifacts cause problems with transitive dependencies.
       -->
