--- a/plugins/restlet1x/nexus-restlet1x-plugin/pom.xml
+++ b/plugins/restlet1x/nexus-restlet1x-plugin/pom.xml
@@ -71,6 +71,13 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerId>groovy-eclipse-compiler</compilerId>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <executions>
           <execution>
