--- a/components/pom.xml
+++ b/components/pom.xml
@@ -37,7 +37,7 @@
     <module>nexus-commands</module>
     <module>nexus-component-model</module>
     <module>nexus-component-services</module>
-    <module>nexus-component-source-api</module>
+    <module>nexus-component-source</module>
     <module>nexus-configuration-model</module>
     <module>nexus-core</module>
     <module>nexus-ehcache</module>
