--- a/plugins/basic/nexus-componentviews-plugin/pom.xml
+++ b/plugins/basic/nexus-componentviews-plugin/pom.xml
@@ -40,7 +40,7 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
-      <artifactId>nexus-component-source-api</artifactId>
+      <artifactId>nexus-component-source</artifactId>
     </dependency>
 
     <dependency>
