--- a/buildsupport/maven/pom.xml
+++ b/buildsupport/maven/pom.xml
@@ -28,9 +28,9 @@
   <packaging>pom</packaging>
 
   <properties>
-    <apache-maven.version>3.0.5</apache-maven.version>
-    <aether.version>1.13.1</aether.version>
-    <wagon.version>2.4</wagon.version>
+    <apache-maven.version>3.2.3</apache-maven.version>
+    <aether.version>1.0.0.v20140518</aether.version>
+    <wagon.version>2.7</wagon.version>
     <maven-indexer.version>5.1.2-bf3d48b</maven-indexer.version>
   </properties>
 
@@ -143,32 +143,38 @@
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.aether</groupId>
+        <groupId>org.eclipse.aether</groupId>
         <artifactId>aether-api</artifactId>
         <version>${aether.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.aether</groupId>
+        <groupId>org.eclipse.aether</groupId>
         <artifactId>aether-util</artifactId>
         <version>${aether.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.aether</groupId>
+        <groupId>org.eclipse.aether</groupId>
         <artifactId>aether-spi</artifactId>
         <version>${aether.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.aether</groupId>
+        <groupId>org.eclipse.aether</groupId>
         <artifactId>aether-impl</artifactId>
         <version>${aether.version}</version>
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.aether</groupId>
-        <artifactId>aether-connector-wagon</artifactId>
+        <groupId>org.eclipse.aether</groupId>
+        <artifactId>aether-connector-basic</artifactId>
+        <version>${aether.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.eclipse.aether</groupId>
+        <artifactId>aether-transport-wagon</artifactId>
         <version>${aether.version}</version>
       </dependency>
 
@@ -188,6 +194,12 @@
             <artifactId>xml-apis</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.sisu</groupId>
+        <artifactId>sisu-maven-bridge</artifactId>
+        <version>3.2.0-SNAPSHOT</version>
       </dependency>
 
     </dependencies>
