--- a/buildsupport/testing/pom.xml
+++ b/buildsupport/testing/pom.xml
@@ -37,7 +37,7 @@
       <dependency>
         <groupId>org.sonatype.sisu</groupId>
         <artifactId>sisu-bundle-launcher</artifactId>
-        <version>1.8</version>
+        <version>1.9-SNAPSHOT</version>
       </dependency>
 
       <dependency>
