After a lot of grief, ditching PoolingConnectionProvider
As it uses c3p0 under the hud in a way that is not osgi friendly (Class.forName).
Instead, wrapping the H2 pool by borrowed code from nuget plugin.

--- a/plugins/basic/nexus-quartz-plugin/pom.xml
+++ b/plugins/basic/nexus-quartz-plugin/pom.xml
@@ -63,6 +63,16 @@
     </dependency>
 
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+    </dependency>
+
+    <!--
+      Note: quartz depends on c3p0 but we don't use it
+      Still, did not exclude it as it would introduce OSGi errors
+      TODO: Stuart?
+    -->
+    <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
