--- a/buildsupport/plexus/pom.xml
+++ b/buildsupport/plexus/pom.xml
@@ -94,7 +94,7 @@
       <dependency>
         <groupId>org.sonatype.plexus</groupId>
         <artifactId>plexus-ldap-testsuite</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.1</version>
         <exclusions>
           <exclusion>
             <groupId>org.codehaus.plexus</groupId>
