NEXUS-7371: remove the automatic feature discovery in favour of a strict list of features to install

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
@@ -6,4 +6,27 @@ nexus-context-path=/
 # Nexus section
 nexus-work=${nexus-base}/../sonatype-work/nexus
 nexus-edition=nexus-oss-edition
+nexus-features=\
+ nexus-content-plugin,\
+ nexus-webresources-plugin,\
+ nexus-groovy-plugin,\
+ nexus-restlet1x-plugin,\
+ nexus-siesta-plugin,\
+ nexus-plugin-console-plugin,\
+ nexus-ssl-plugin,\
+ nexus-ldap-plugin,\
+ nexus-maven-bridge-plugin,\
+ nexus-rrb-plugin,\
+ nexus-indexer-lucene-plugin,\
+ nexus-timeline-plugin,\
+ nexus-archetype-plugin,\
+ nexus-capabilities-plugin,\
+ nexus-logging-plugin,\
+ nexus-atlas-plugin,\
+ nexus-wonderland-plugin,\
+ nexus-rapture-plugin,\
+ nexus-extdirect-plugin,\
+ nexus-coreui-plugin,\
+ nexus-componentviews-plugin,\
+ nexus-rawcontent-plugin
 
