Adding quartz to loaded features

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
@@ -11,6 +11,7 @@ nexus-features=\
  nexus-webresources-plugin,\
  nexus-groovy-plugin,\
  nexus-restlet1x-plugin,\
+ nexus-quartz-plugin,\
  nexus-siesta-plugin,\
  nexus-plugin-console-plugin,\
  nexus-ssl-plugin,\
