switch to jruby-1.7.18
and use IsolatedScriptingContainer with its new OSGi support. which also
reduces the start up of the ScriptingContainer significantly.

--- a/plugins/rubygem/nexus-ruby-tools/pom.xml
+++ b/plugins/rubygem/nexus-ruby-tools/pom.xml
@@ -65,6 +65,19 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>target/rubygems-provided</directory>
+	<includes>
+	  <include>gems/**</include>
+	  <include>specifications/*</include>
+	</includes>
+      </resource>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>de.saumya.mojo</groupId>
@@ -77,7 +90,7 @@
           </execution>
         </executions>
         <configuration>
-          <includeGemsInResources>provided</includeGemsInResources>
+          <includeRubygemsInResources>true</includeRubygemsInResources>
         </configuration>
       </plugin>
 
