--- a/plugins/security/nexus-kenai-plugin/pom.xml
+++ b/plugins/security/nexus-kenai-plugin/pom.xml
@@ -40,6 +40,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.sonatype.nexus.plugins</groupId>
+      <artifactId>nexus-capabilities-plugin</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.json</groupId>
       <artifactId>org.json</artifactId>
     </dependency>
@@ -59,29 +65,6 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.codehaus.modello</groupId>
-        <artifactId>modello-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>kenai-realm-config.xml</id>
-            <goals>
-              <goal>java</goal>
-              <goal>xpp3-reader</goal>
-              <goal>xpp3-writer</goal>
-              <goal>xsd</goal>
-            </goals>
-            <configuration>
-              <version>2.8.0</version>
-              <packageWithVersion>false</packageWithVersion>
-              <models>
-                <model>src/main/mdo/kenai-realm-config.xml</model>
-              </models>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
       <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>karaf-maven-plugin</artifactId>
