--- a/pom.xml
+++ b/pom.xml
@@ -352,6 +352,12 @@
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
+        <artifactId>pax-logging-access</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
       <!-- testsupport -->
 
       <dependency>
