--- a/components/nexus-orient/pom.xml
+++ b/components/nexus-orient/pom.xml
@@ -53,8 +53,18 @@
     </dependency>
 
     <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.sonatype.sisu.goodies</groupId>
       <artifactId>goodies-lifecycle</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.sisu.goodies</groupId>
+      <artifactId>goodies-crypto</artifactId>
     </dependency>
 
     <dependency>
