Include OrientDB's graph support
* Re-wrapped orientdb-graphdb to make rexster import optional (as per other com.tinkerpop imports)
* Updated commons-configuration to 1.10 as this version has proper OSGi metadata
* Excluded the Gremlin language support for the moment as it's not required to use the graph API

--- a/buildsupport/db/pom.xml
+++ b/buildsupport/db/pom.xml
@@ -74,6 +74,14 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils-core</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>com.tinkerpop.gremlin</groupId>
+            <artifactId>gremlin-java</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.tinkerpop.gremlin</groupId>
+            <artifactId>gremlin-groovy</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
 
