--- a/pom.xml
+++ b/pom.xml
@@ -696,6 +696,7 @@
               <id>httpclient</id>
               <id>maven-model</id>
               <id>maven-model-builder</id>
+              <id>orientdb-graphdb</id>
               <id>xmlpull</id>
               <id>xpp3_min</id>
               <id>shiro-guice</id>
