NEXUS-7873: add example bundle with 'bundle-version' attributes on its Import-Package to the ObrIT

--- a/testsuite/modern-testsuite/pom.xml
+++ b/testsuite/modern-testsuite/pom.xml
@@ -379,6 +379,7 @@
                     <xml>org.apache.felix:org.osgi.compendium:1.4.0</xml>
                     <xml>org.apache.geronimo.specs:geronimo-servlet_3.0_spec:1.0</xml>
                     <xml>org.apache.portals:portlet-api_2.0_spec:1.0</xml>
+                    <xml>org.jacoco:org.jacoco.report:0.6.2.201302030002</xml>
                   </extraArtifacts>
                 </configuration>
               </execution>
