Apply local workaround for MANIMALSNIFFER-51 (Java8 runtime support)

--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,14 @@
               <version>1.0</version>
             </signature>
           </configuration>
+          <dependencies>
+            <!-- MANIMALSNIFFER-51 -->
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm-all</artifactId>
+              <version>5.0.3</version>
+            </dependency>
+          </dependencies>
         </plugin>
 
         <!--
