--- a/buildsupport/db/pom.xml
+++ b/buildsupport/db/pom.xml
@@ -28,7 +28,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <orientdb.version>2.0-M2</orientdb.version>
+    <orientdb.version>2.0-rc1</orientdb.version>
   </properties>
 
   <dependencyManagement>
@@ -132,7 +132,7 @@
       <dependency>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-jdbc</artifactId>
-        <version>1.7</version>
+        <version>${orientdb.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
