--- a/components/nexus-blobstore-file/pom.xml
+++ b/components/nexus-blobstore-file/pom.xml
@@ -35,6 +35,11 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-common</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-core</artifactId>
       <scope>provided</scope>
     </dependency>
@@ -42,11 +47,6 @@
     <dependency>
       <groupId>org.mapdb</groupId>
       <artifactId>mapdb</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
     </dependency>
 
     <dependency>
