--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-common</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
         <artifactId>base-configuration</artifactId>
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
