--- a/buildsupport/other/pom.xml
+++ b/buildsupport/other/pom.xml
@@ -63,6 +63,16 @@
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.ehcache</artifactId>
         <version>2.6.9_1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-jmsreplication</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
