--- a/buildsupport/groovy/pom.xml
+++ b/buildsupport/groovy/pom.xml
@@ -16,6 +16,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
+  <properties>
+    <groovy.version>2.3.7</groovy.version>
+  </properties>
 
   <parent>
     <groupId>org.sonatype.nexus.buildsupport</groupId>
@@ -33,13 +36,13 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>2.1.5</version>
+        <version>${groovy.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy</artifactId>
-        <version>2.1.5</version>
+        <version>${groovy.version}</version>
       </dependency>
 
       <!--
