NEXUS-7911: fix javax.el discovery (assumes implementation will be visible from TCCL)
 * Made javax.el implementation bundle a fragment of hibernate-validator
 * Switched validation-api to be fragment of hibernate-validator instead of vice-versa
 * Used hibernate-validator as the TCCL during validation interception

This makes sure that the service loader lookup in validation-api can see the
hibernate-validator implementation (as they're still merged in the same space)
but also that the javax.el implementation can now be seen from the same TCCL.

--- a/pom.xml
+++ b/pom.xml
@@ -693,7 +693,8 @@
               <!--
               Need special wrapping/fragments
               -->
-              <id>hibernate-validator</id>
+              <id>javax.el</id>
+              <id>validation-api</id>
               <id>httpcore</id>
               <id>httpclient</id>
               <id>maven-model</id>
