NEXUS-7835: Adding tasks for npm db backup and recreating hosted md
Change covers multiple use cases, several implemented:
* backup of npm db (with possibility of "offline" restore, by copying backup files back)
* update/recreate npm metadata (with data loss in case of DB built from scratch)

--- a/plugins/npm/nexus-npm-repository-plugin/pom.xml
+++ b/plugins/npm/nexus-npm-repository-plugin/pom.xml
@@ -62,6 +62,12 @@
       <version>2.3.1</version>
     </dependency>
 
+    <!-- Needed for rebuild npm metadata, to peek into tarballs -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-plugin-testsupport</artifactId>
