--- a/buildsupport/commons/pom.xml
+++ b/buildsupport/commons/pom.xml
@@ -82,6 +82,12 @@
         <version>1.1</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>1.9</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
