--- a/testsupport/nexus-test-common/pom.xml
+++ b/testsupport/nexus-test-common/pom.xml
@@ -69,8 +69,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.eclipse.jetty.orbit</groupId>
-      <artifactId>javax.servlet</artifactId>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
     </dependency>
 
     <dependency>
