--- a/buildsupport/testing/pom.xml
+++ b/buildsupport/testing/pom.xml
@@ -43,13 +43,13 @@
       <dependency>
         <groupId>org.sonatype.http-testing-harness</groupId>
         <artifactId>server-provider</artifactId>
-        <version>0.9</version>
+        <version>0.10-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.http-testing-harness</groupId>
         <artifactId>junit-runner</artifactId>
-        <version>0.9</version>
+        <version>0.10-SNAPSHOT</version>
       </dependency>
 
       <dependency>
