--- a/plugins/basic/nexus-siesta-plugin/pom.xml
+++ b/plugins/basic/nexus-siesta-plugin/pom.xml
@@ -41,6 +41,17 @@
     <dependency>
       <groupId>org.sonatype.siesta</groupId>
       <artifactId>siesta-server</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+          <artifactId>javax.servlet</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
     </dependency>
 
     <dependency>
