Turn off strict javadoc checks in Java8

--- a/pom.xml
+++ b/pom.xml
@@ -363,6 +363,17 @@
         </plugin>
 
         <!--
+        Turn off strict javadoc checks in Java8.
+        -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <additionalparam>-Xdoclint:none</additionalparam>
+          </configuration>
+        </plugin>
+
+        <!--
         Additional configuration for release; enable additional profiles.
         -->
         <plugin>
