--- a/buildsupport/maven/pom.xml
+++ b/buildsupport/maven/pom.xml
@@ -199,7 +199,7 @@
       <dependency>
         <groupId>org.sonatype.sisu</groupId>
         <artifactId>sisu-maven-bridge</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
+        <version>3.2.0</version>
       </dependency>
 
     </dependencies>
